--- a/dada/extras/documentation/pod_source/changes_8_x.pod
+++ b/dada/extras/documentation/pod_source/changes_8_x.pod
@@ -16,17 +16,17 @@ This is a bugfix only release of Dada Mail, but touches upon a multitude of prob
 
 Several problems with encoding have been found in Bridge, most notably when a message in 8bit Content Transfer Encoding and UTF-8 Encoding is sent. Messages are, by default, handled in a different Content Transfer Encoding (quoted-printable), which is basically 7bit. Problem happens if you try to work with these two Content Transfer Encodings together - basically corruption of text. 
 
-To counteract this, messages received by Bridge are first changed to whatever the internal Content Transfer Encoding is, then processed as usual.
+To counteract this, messages received by Bridge are first changed to whatever the internal Content Transfer Encoding is, then processed as usual. 
 
 =head3 Archives w/Inline File Attachments
 
-Somewhat related to Bridge, archives with inline file attachments wouldn't  show up correctly. 
+Somewhat related to Bridge, archives with inline file attachments wouldn't  show up correctly. (fixed)
 
 L<https://github.com/justingit/dada-mail/issues/482>
 
 =head3 Multiple Subscribe Extension Script
 
-Subscription confirmation in the C<multiple_subscribe.cgi> extension script would fail, if you have a Profile Field that is required, even if it's submitted with the form. 
+Subscription confirmation in the C<multiple_subscribe.cgi> extension script would fail, if you have a Profile Field that is required, even if it's submitted with the form. (fixed)
 
 L<https://github.com/justingit/dada-mail/issues/481>
 
@@ -38,30 +38,41 @@ Profiles had several issues:
 
 =item * Logging in, after subscription
 
-After a subscription is made, the subscriber should be logged into their profile right afterwards (via a session cookie) and able to visit their profile via the really big button presented to them, without having to know their current login information. This was broken (now fixed). 
+After a subscription is made, the subscriber should be logged into their profile right afterwards (via a session cookie) and able to visit their profile via the really big button presented to them, without having to know their current login information. This was broken (fixed). 
 
-Also, when this was broken, it wasn't clear why things didn't work, as no useful error message was presented (fixed as well). 
+Also, when this was broken, it wasn't clear why things didn't work, as no useful error message was presented (fixed). 
 
 =item * HTML formatting
 
-Several errors in the HTML was present in the Profile Home screen, leading to some of the interface to be broken. 
+Several errors in the HTML was present in the Profile Home screen, leading to some of the interface to be broken. (fixed)
 
 L<https://github.com/justingit/dada-mail/issues/479>
 
 =item * Logging In
 
-There seemed also to be a problem with merely logging into you Profile in some instances.
+There seemed also to be a problem with merely logging into you Profile in some instances. (fixed)
 
 =item * Registering an already-existing account
 
-It was also called to our attention that you could still attempt to register an already existing account, even though there's a check in place to hault such an action. 
+It was also called to our attention that you could still attempt to register an already existing account, even though there's a check in place to hault such an action. (fixed)
 
 =back
 
 =head3 Send a Webpage
 
-Many problems have cropped up in the Send a Webpage screen, some having to do with problems with encoding (again), and others, when specific types of data are included in the webapge, including linked stylesheets. This would ultimately cause a sending to fail. 
+Many problems have cropped up in the Send a Webpage screen, some having to do with problems with encoding (again), and others, when specific types of data are included in the webapge, including linked stylesheets. This would ultimately cause a sending to fail. (fixed)
 
+Send a Webpage also suffered from a problem with using the option to set a custom PlainText alternative - seems as if that option was never correctly utlized, and the auto-generated version would always be used (fixed)
+
+L<https://github.com/justingit/dada-mail/issues/485>
+
+=head3 List Invitations
+
+Like most administration list control panel screens in Dada Mail, the List Invitation screen can be disabled, if you are logged in with the List Password. That's done in the list control panel screen, I<Your List Control Panel - Customize Feature Set>
+
+List Invitation doesn't have its screen available in the menu, so it's a little bit of a quess on how to fully disable this. The way it should work is by disabling, I<Membership - Invite/Subscribe/Add>, but this does not work - rather disabling I<Mail Sending - Mass Mailing Options> did this trick, which is nonsensical. (fixed)
+
+L<https://github.com/justingit/dada-mail/issues/486>
 
 
 =cut
